--- a/index.html
+++ b/index.html
@@ -1,70 +1,80 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
-
 <head>
-   <meta charset="utf-8">
-   <meta name="viewport" content="width=device-width, initial-scale= 1.0">
-   <title> WDD 131 - Dynamic Web Fundamentals - Ashley Lujan </title>
-   <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - Ashley Lujan, personal page with information, interest and final project.">
-   <meta name="author" content="Ashley Lujan">
-   <link rel="stylesheet" href="styles/base.css">
-   <script src="scripts/getdates,js" defer></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WDD 131 - Dynamic Web Fundamentals - Ashley Lujan</title>
+    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - Ashley Lujan, personal page with information, interests and final project.">
+    <meta name="author" content="Ashley Lujan">
+    <link rel="stylesheet" href="styles/base.css">
+    <script src="scripts/getdates.js" defer></script>
 </head>
+
 <body>
-    <header>
-        <span id="course-title">WDD 131 - Dynamic Web Fundamentals</span>
+<header>
+    <span id="course-title">WDD 131 - Dynamic Web Fundamentals</span>
 
-        <nav>
-            <a href="https://www.linkedin.com/in/ashley-lujan-a01b8b375/">Linkedin</a>
-            <a href="https://byupw.instructure.com/."> I-Learn</a>
-            <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/2-ne/31?lang=eng">scriptures</a>
-            <a href="#">Final Project</a>
-        </nav>
-    </header>
+    <nav>
+        <a href="https://www.linkedin.com/in/ashley-lujan-a01b8b375/">LinkedIn</a>
+        <a href="https://byupw.instructure.com/">I-Learn</a>
+        <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/2-ne/31?lang=eng">Scripture</a>
+        <a href="#">Final Project</a>
+    </nav>
+</header>
 
-    <main>
-        <h1>Ashley Lujan</h1>
+<main>
+    <h1>Ashley Lujan</h1>
 
+    <section class="content">
+        <!-- ABOUT ME -->
         <div class="card">
+            <h2>About Me</h2>
 
-             <section class="card">
-                <div class="card-body">
-                <div class="text">
-            <h2>About me</h2>
-             My name is Ashley Lujan I was born in Lima, Peru but i live in Spain.
-            I am currently studying Web and Computer Programming at BYU Idaho. I 
-            love spend time with my family, I love dance in fact, i have dance 
-            classes Monday troough Thursday, I love playing volleyball, and i
-             love traveling the world.
-            </p>
-            </div>
-            <img src="images/imagen-profile.jpg" alt="Ashley Lujan" width="300">
+            <div class="about">
+                <p>
+                    My name is Ashley Lujan. I was born in Lima, Peru, but I currently
+                    live in Spain. I am studying Web and Computer Programming at BYU-Idaho.
+                    I love spending time with my family, dancing (I take dance classes
+                    Monday through Thursday), playing volleyball, and traveling the world.
+                </p>
+
+                <img src="images/imagen-profile.jpg" alt="Ashley Lujan">
             </div>
 
             <h3>Lima, Peru</h3>
+
             <div class="location">
-              <figure>
-                <img src="images/peru-flag.png" alt="Flag of Peru">
-                <figcaption>Official Flag of Peru</figcaption>
-              </figure>
-            <p>Peru is one of the most biodiverse countries in the world and 
-                is located on the western coast of South America. It is home 
-                to over 80% of the world’s ecosystems, ranging from the Andes
-                 Mountains to the Amazon rainforest and the Pacific coastline.
-                Peru is renowned for its ancient Inca heritage, including the
-                iconic Machu Picchu, its rich culinary tradition—ranked among
-                the best globally, and its vibrant indigenous cultures that continue to thrive today.</p>
+                <figure>
+                    <img src="images/peru-flag.png" alt="Flag of Peru">
+                    <figcaption>Official Flag of Peru</figcaption>
+                </figure>
+
+                <p>
+                    Peru is one of the most biodiverse countries in the world and is located
+                    on the western coast of South America. It is home to over 80% of the
+                    world’s ecosystems, ranging from the Andes Mountains to the Amazon
+                    rainforest and the Pacific coastline. Peru is renowned for its ancient
+                    Inca heritage, including Machu Picchu, its rich culinary tradition, and
+                    its vibrant indigenous cultures.
+                </p>
             </div>
-            </div>
-  </div>
-           
-        </section>
         </div>
-    </main>
+
+        <!-- RESOURCES -->
+        <div class="card">
+            <h2>Web Dev Resources</h2>
+            <ul>
+                <li><a href="https://developer.mozilla.org/">MDN Web Docs</a></li>
+                <li><a href="https://www.w3schools.com/">W3 Schools</a></li>
+                <li><a href="https://css-tricks.com/">CSS Tricks</a></li>
+                <li><a href="https://www.udemy.com/">Udemy</a></li>
+            </ul>
+        </div>
+    </section>
+</main>
 
 <footer>
-    <p>&copy; <span id="currentyear"></span> Ashley Lujan  | Peru 
-    </p>
+    <p>&copy; <span id="currentyear"></span> Ashley Lujan | Peru</p>
     <p id="lastModified"></p>
 </footer>
 </body>
