--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
     <title>WDD 131 - Dynamic Web Fundamentals - Ashley Lujan</title>
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - Ashley Lujan, personal page with information, interests and final project.">
     <meta name="author" content="Ashley Lujan">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="styles/base.css">
     <script src="scripts/getdates.js" defer></script>
 </head>
 
 <body>
     <header>
-        <span id="course-title">WDD 131 - Dynamic Web Fundamentals</span>
+
+    <span id="course-title">WDD 131 - Dynamic Web Fundamentals</span>
 
         <nav>
             <a href="https://www.linkedin.com/in/ashley-lujan-a01b8b375/">LinkedIn</a>
@@ -27,8 +32,7 @@
         <h1>Ashley Lujan</h1>
 
         <section class="content">
-            <!-- ABOUT ME -->
-            <div class="card">
+            <section class="card">
                 <h2>About Me</h2>
 
                 <div class="about">
@@ -59,9 +63,9 @@
                         its vibrant indigenous cultures.
                     </p>
                 </div>
-            </div>
+            </section>
 
-            <div class="card">
+            <section class="card">
                 <h2>Web Dev Resources</h2>
                 <ul>
                     <li><a href="https://developer.mozilla.org/">MDN Web Docs</a></li>
@@ -69,7 +73,7 @@
                     <li><a href="https://css-tricks.com/">CSS Tricks</a></li>
                     <li><a href="https://www.udemy.com/">Udemy</a></li>
                 </ul>
-            </div>
+            </section>
         </section>
     </main>
 
