--- a/temples.html
+++ b/temples.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
+   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Temple Album</title>
 
-  <!-- Google Font -->
+  <meta name="description" content="A Temple Album showcasing images of sacred temples from different locations, displayed in a responsive layout using HTML, CSS, and JavaScript.">
+  <meta name="author" content="Ashley Lujan">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-  <!-- CSS (mobile first) -->
-  <link rel="stylesheet" href="styles/temple.css">
-  <link rel="stylesheet" href="styles/temple-large.css">
+  <link rel="stylesheet" href="styles/temples.css">
+  <link rel="stylesheet" href="styles/temples-large.css">
 
-  <!-- JS -->
-  <script src="scripts/temple.js" defer></script>
+  <script src="scripts/temples.js" defer></script>
 </head>
 <body>
 
@@ -38,39 +39,39 @@
 
   <section class="gallery">
     <figure>
-      <img src="images/rome_italy_temple.webp" alt="Templo San Diego California">
+      <img src="images/rome_italy_temple.webp" alt="Temple Rome Italy">
       <figcaption>Rome Italy</figcaption>
     </figure>
     <figure>
-      <img src="images/rome_italy_temple.webp" alt="Templo San Diego California">
+      <img src="images/rome_italy_temple.webp" alt="Temple Rome Italy">
       <figcaption>Rome Italy</figcaption>
     </figure>
     <figure>
-      <img src="images/rome_italy_temple.webp" alt="Templo San Diego California">
+      <img src="images/rome_italy_temple.webp" alt=Temple Rome Italy">
       <figcaption>Rome Italy</figcaption>
     </figure>
     <figure>
-      <img src="images/rome_italy_temple.webp" alt="Templo San Diego California">
+      <img src="images/rome_italy_temple.webp" alt="Temple Rome Italy">
       <figcaption>Rome Italy</figcaption>
     </figure>
     <figure>
-      <img src="images/rome_italy_temple.webp" alt="Templo San Diego California">
+      <img src="images/rome_italy_temple.webp" alt="Temple Rome Italy">
       <figcaption>Rome Italy</figcaption>
     </figure>
     <figure>
-      <img src="images/rome_italy_temple.webp" alt="Templo San Diego California">
+      <img src="images/rome_italy_temple.webp" alt="Temple Rome Italy">
       <figcaption>Rome Italy</figcaption>
     </figure>
     <figure>
-      <img src="images/rome_italy_temple.webp" alt="Templo San Diego California">
+      <img src="images/rome_italy_temple.webp" alt="Temple Rome Italy">
       <figcaption>Rome Italy</figcaption>
     </figure>
     <figure>
-      <img src="images/rome_italy_temple.webp" alt="Templo San Diego California">
+      <img src="images/rome_italy_temple.webp" alt="Temple Rome Italy">
       <figcaption>Rome Italy </figcaption>
     </figure>
     <figure>
-      <img src="images/rome_italy_temple.webp" alt="Templo San Diego California">
+      <img src="images/rome_italy_temple.webp" alt="Temple Rome Italy">
       <figcaption>Rome Italy</figcaption>
     </figure>
   </section>
