--- a/temples.html
+++ b/temples.html
@@ -7,7 +7,7 @@
   <title>Temple Album</title>
 
   <meta name="description" content="A Temple Album showcasing images of sacred temples from different locations, displayed in a responsive layout using HTML, CSS, and JavaScript.">
-  <meta name="author" content="Ashley Lujan">
+  <meta name="author" content="Ashley Lujan Yañez">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,6 +36,9 @@
 
 <main>
   <h2>Home</h2>
+  <section class="gallery">
+  <h3 class="visually-hidden">Temple Gallery</h3>
+
 
   <section class="gallery">
     <figure>
@@ -47,7 +50,7 @@
       <figcaption>Rome Italy</figcaption>
     </figure>
     <figure>
-      <img src="images/rome_italy_temple.webp" alt=Temple Rome Italy">
+      <img src="images/rome_italy_temple.webp" alt="Temple Rome Italy">
       <figcaption>Rome Italy</figcaption>
     </figure>
     <figure>
@@ -79,7 +82,7 @@
 
 <footer>
   <p>
-    ©<span id="year"></span> 🌸 Ashley Lujan 🌸 Peru<br>
+    ©<span id="year"></span> 🌸 Ashley Lujan Yañez 🌸 Peru<br>
     Last Modification: <span id="lastModified"></span>
   </p>
 </footer>
