--- a/place.html
+++ b/place.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Maldives</title>
-  <meta name="description" content="Maldives is a tropical island nation in the Indian Ocean, famous for its crystal-clear waters, white-sand beaches, and vibrant coral reefs. Made up of over a thousand small islands, it is one of the world’s most popular destinations for snorkeling, diving, and luxury tourism. The Maldives is known for its warm climate, turquoise lagoons, and unique overwater bungalows. Its culture is influenced by South Asian, Arab, and African traditions, with Dhivehi as the official language. Despite its natural beauty, the country is vulnerable to climate change due to its low elevation above sea level.">
-  <meta name="author" content="Ashley Lujan">
+  <title>Maldives: Tropical Paradise | Travel Guide</title>
+  <meta name="description" content="Maldives is a tropical island nation known for turquoise waters, white-sand beaches, coral reefs, and luxury island resorts.">
+  <meta name="author" content="Ashley Lujan Yañez">
 
   <link rel="stylesheet" href="styles/place.css">
   <script src="scripts/place.js" defer></script>
