--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -7,8 +7,8 @@
   <meta name="author" content="Ashley Lujan Yañez">
   <meta name="description" content="Site plan document for a budget travel guide website project.">
 
-  <link rel="stylesheet" href="styles/siteplan.css">
-  <script src="scripts/siteplan.js" defer></script>
+  <link rel="stylesheet" href="siteplan.css">
+  <script src="siteplan.js" defer></script>
 
 </head>
 
